# cpp-mnist

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  misc.cpp  misc.hpp
tests/: misc_test.cpp
